# sycl_migration_agent

./: CLAUDE.md  GENOFFSETPOINTERS_MIGRATION_REPORT.md  MIGRATION_COMPLETION_REPORT.md  MIGRATION_STATUS.md  MIGRATION_SUMMARY_GLOBALAVGPOOL.md  Makefile.globalAvgPool  README.md  REMOTE_EXECUTION_SETUP.md  TRANSLATION_NOTES_GLOBALAVGPOOL.md  cuda_scan_results.json  cutlass_mha_complexity.json  cutlass_mha_migration_analysis.md  cutlass_mha_summary.json  debug_cuda_test.cu  debug_cuda_test_v2.cu  debug_softmax.cu  minimal_test.cpp  remote_runner.py  run_local_tests.sh  simple_vector_add.cpp  test_addbias_nchw.cpp
.claude/agents/: cmake-builder.md  cuda-scanner.md  cuda-test-generator.md  performance-optimizer.md  remote-executor.md  sycl-test-generator.md  sycl-translator.md
.claude/skills/analyze-kernel-complexity/: SKILL.md  analyze_kernel_complexity.py
.claude/skills/compare-numerical-results/: SKILL.md  compare-numerical-results.py  compare_all_outputs.py
.claude/skills/create-cuda-tests/: SKILL.md
.claude/skills/execute-remote-ssh/: SKILL.md  execute-remote-ssh.py  remote_server_config.json
.claude/skills/generate-cmake/: SKILL.md
.claude/skills/optimize-sycl-kernel/: SKILL.md
.claude/skills/profile-gpu-kernel/: SKILL.md
.claude/skills/scan-cuda-repo/: SKILL.md  scan_cuda_repo.py
.opencode/agents/: architect.md  developer.md  profiler.md  reviewer.md  syclgen.md  tester.md
.opencode/commands/: remote-run.md  remote-run.sh
benchmarks/: performance_analysis_report.md
config/: ssh_config_template.json
cuda/: CMakeLists.txt  CMakePresets.json  README.md  build.sh  build_cuda.sh  cuda_inventory.json  scan_report.md
cuda/cmake/: lc0_cuda_kernels-config.cmake.in
cuda/tests/: CMakeLists.txt  Makefile  README.md  analyze_results.py  run_all_tests.sh  run_benchmarks.sh  run_fp16_tests.sh  run_math_tests.sh  run_nn_tests.sh  run_tests.sh  run_transform_tests.sh  test_compilation.sh  test_vectorAdd.cpp  validate_architecture.sh  vectorAdd_kernel.cu  vectorAdd_kernel.h
cuda/tests/common/: base_test_fixture.h  test_utils.h
cuda/tests/fp16/: output_input_transform_test.cu  se_layer_nhwc_test.cu
cuda/tests/math/: add_bias_test.cu  add_vectors_test.cu  batch_norm_test.cu  reduce_sum_test.cu  softmax_test.cu
cuda/tests/nn/: layer_norm_test.cu  policy_head_test.cu  value_head_test.cu  winograd_transform_test.cu
cuda/tests/reduction/: atomic_sum_test.cu  reshape_test.cu  transpose_test.cu
docs/: PREPROCESS_ATTENTION_MIGRATION.md  expandPlanes_migration_report.md  expandPlanes_translation_mapping.md  softmax_migration_summary.md
lc0/src/neural/backends/sycl/: common_kernels.dp.cpp  common_kernels.sycl.cpp  cutlass_kernels.sycl.cpp  fp16_kernels.dp.cpp  fp16_kernels.sycl.cpp  inputs_outputs_backup.h  inputs_outputs_simple.h  kernels.h  layers.cc.dp.cpp  layers.h  network_sycl.cc.dp.cpp  network_sycl.cc.dp.cpp.backup  sycl_common.h  sycl_helper.inc  sycl_inputs_outputs.cc.dp.cpp  sycl_inputs_outputs.h  sycl_network_complete.cc.dp.cpp  winograd_helper.inc
migration_logs/: 01_cuda_analysis_report.md  02_sycl_common_kernels_migration.md  03_sycl_fp16_kernels_migration.md  04_sycl_cutlass_migration.md  MIGRATION_SUMMARY.md
neural/tables/: activation_function.h
results/: global_scale_translation_report.md
scripts/: compare_results.py  remote_cuda_executor.sh  remote_sycl_executor.sh  run_full_comparison.sh
sycl/: CMakeLists.txt  README.md  README_BUILD.md  TRANSLATION_NOTES.md  build_sycl.sh  intel_gpu_toolchain.cmake  run_sycl_tests.sh  test_addVectors.cpp  test_addVectorsHNC_NHC.cpp  test_addVectorsHNC_NHC.sh  test_addVectorsHNC_NHC_CMakeLists.txt  test_genOffsetPointers.cpp  test_input_gating.cpp  test_softmax_CMakeLists.txt
sycl/src/: TRANSLATION_NOTES.md  vectorAdd.cpp  vectorAdd.h  vectorAdd_optimized.cpp
sycl/src/neural/backends/sycl/: CMakeLists_promotion_test.txt  MHA_README.md  common_kernels.cpp  fp16_kernels.cpp  fp16_kernels.h  fused_attention_sycl.cpp  kernels.h  mha_integration_example.cpp  sycl_common.h  sycl_helper.inc  test_promotion_logits.cpp
sycl/tests/: CMakeLists.txt  README.md  build_and_test.sh  run_tests.sh  test_add_bias_batched.cpp  test_add_vectors.cpp  test_batch_norm.cpp  test_global_avg_pool.cpp  test_global_scale.cpp  test_layer_norm.cpp  test_policy_map.cpp  test_preprocess_attention.cpp  test_se_layer_nhwc.cpp  test_vectorAdd_sycl.cpp  vectorAdd_kernel_sycl.cpp  vectorAdd_kernel_sycl.h
tests/: test_addbias_nchw_sycl.cpp  test_expandPlanes.cpp  test_fused_mha.cpp  test_globalAvgPool.cpp  test_softmax_sycl.cpp
